--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -4,6 +4,6 @@ button {
     border-radius: 30px;
     border-style: none;
     font-size: large;
-    background-color: $primary-color;
+    background-image: linear-gradient(to bottom right, $secondary-color, $primary-color);
     color: #fff;
 }
