--- a/scss/layouts/_how.scss
+++ b/scss/layouts/_how.scss
@@ -9,17 +9,62 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        align-items: center;
         padding-bottom: 1rem;
-        height: 300px;
+        height: 20rem;
+        
     }
 
     button {
         background: whitesmoke;
         border-style: none;
         border-radius: 30px;
-        height: 80px;
+        height: 5rem;
+        width: 95%;
+        padding-left: 3rem;
         box-shadow: 1em 0.5em 0.5em lightgray;
         font-size: medium;
+        font-weight: bold;
+        text-align: left;
+    }
+
+    .choose::before {
+        content: "1";
+        position: relative;
+        top: 0.1rem;
+        left: -3.5rem;
+        background-color: $primary-color;
+        padding: 0.5rem;
+        color: white;
+        font-weight: lighter;
+        font-size: medium;
+        border-radius: 50%;
+    }
+
+    .create::before {
+        content: "2";
+        position: relative;
+        top: 0.1rem;
+        left: -3.5rem;
+        background-color: $primary-color;
+        padding: 0.5rem;
+        color: white;
+        font-weight: lighter;
+        font-size: medium;
+        border-radius: 50%;
+    }
+
+    .go::before {
+        content: "3";
+        position: relative;
+        top: 0.1rem;
+        left: -3.5rem;
+        background-color: $primary-color;
+        padding: 0.5rem;
+        color: white;
+        font-weight: lighter;
+        font-size: medium;
+        border-radius: 50%;
     }
 
 }
