--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,25 +9,90 @@
 @import './layouts/foot';
 @import './base/media';
 
-
-.fp-menu {
+main {
 
     background-color: whitesmoke;
     height: auto;
-    border-radius: 60px;
+    border-radius: 40px;
+    .fp-title {  
+        display: flex;
+        justify-content: space-between;
+
+        h1 {
+            font-family: 'Shrikhand', cursive;
+            font-weight: 900;
+            font-size: 1.8rem;
+            margin-left: 1rem;
+        }
+
+        .fas {
+            padding-right: 1.5rem;
+            padding-top: 0.2rem;
+        }
+    }
+}
+
+.fp-menu {
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding: 1rem;
+
+    
 
     button {
         background-color: white;
         border-style: none;
-        border-radius: 20px;
+        border-radius: 18px;
         padding: 1rem;
-        margin: 0.5rem;
+        margin-top: 1rem;
         box-shadow: 1em 0.5em 0.5em lightgray;
+        text-align: left;
+
+        h3 {
+            padding-bottom: 0.5rem;
+            font-weight: 700;
+        }
+
+        .price-wrap {
+            display: flex;
+            justify-content: space-between;
+        }
 
     }
+
+    .items {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        
+        .item-title {
+            margin-top: 2rem;
+            margin-left: 0.2rem;
+            
+            
+
+        }
+    
+    }
+
+    .order {
+
+        button {
+            
+            padding-right: 4rem;
+            padding-left: 4rem;
+            margin-top: 3rem;
+            margin-bottom: 3rem;
+            border-radius: 50px;
+            border-style: none;
+            font-size: large;
+            background-image: linear-gradient(to bottom right, $secondary-color, $primary-color);
+            color: #fff;
+        }
+
+    }
+    
 
 }
 
