--- a/scss/base/_body.scss
+++ b/scss/base/_body.scss
@@ -1,6 +1,80 @@
+
+
 body {
     font-family: 'Roboto', sans-serif;
     width: 100%;
     margin: 0 auto;
     cursor: pointer;
+    position: relative;
+    
+    .load-screen {
+        
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        z-index: 4;
+        background: lightblue;
+        transition: visibility ease-in-out 3s;
+        visibility: hidden;
+        
+    }
+
+    .loading {
+      border: 16px solid #f3f3f3;
+      border-top: 16px solid #3498db; 
+      border-radius: 50%;
+      width: 200px;
+      height: 200px;
+      animation: spin 2s linear infinite;
+      position: fixed;
+      z-index: 5;
+      overflow: show;
+      margin: auto;
+      top: 0;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      transition: visibility ease-in-out 3s;
+      visibility: hidden;
+      }
+
+
+      /* Animation */
+
+      @keyframes spin {
+        0% {
+          transform: rotate(0deg);
+        }
+        100% {
+          transform: rotate(360deg);
+        }
+      } 
+      
+      .full-pal-img {
+
+        position: relative;
+        
+        
+        img {
+          max-width: 100%;
+          min-width: 100%;
+          height: 20rem;
+          object-fit: cover;
+          z-index: 0;
+          
+        }
+        
+      }
+
+      main {
+        position: relative;
+        top: -4rem;
+        z-index: 2;
+        overflow: visible;
+
+      }
+
 }
+
+
+        
