--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,6 +14,8 @@ main {
     background-color: whitesmoke;
     height: auto;
     border-radius: 40px;
+
+    
     .fp-title {  
         display: flex;
         justify-content: space-between;
@@ -37,22 +39,34 @@ main {
     flex-direction: column;
     align-items: center;
     padding: 1rem;
-
     
 
-    button {
+    .ent {
+        display: flex;
+        justify-content: space-between;
         background-color: white;
-        border-style: none;
-        border-radius: 18px;
-        padding: 1rem;
+        border-radius: 1rem;
         margin-top: 1rem;
-        box-shadow: 1em 0.5em 0.5em lightgray;
-        text-align: left;
-        width: 95%;
+        
 
-        h3 {
-            padding-bottom: 0.5rem;
-            font-weight: 700;
+        .ent-txt {
+            width: 100%;
+            padding: 0.5rem;
+            transition: all 500ms ease-in-out;
+
+            h3 {
+                font-weight: 500;
+            }
+
+
+            &:hover + .slide-tick {
+                transform: scaleX(1);
+                visibility: visible;
+            }
+
+            &:hover {
+                width: 90%;
+            }
         }
 
         .price-wrap {
@@ -60,13 +74,73 @@ main {
             justify-content: space-between;
         }
 
+        .slide-tick {
+            display: inline-block;
+            color: white;
+            height: 3.6rem;
+            width: 10%;
+            background-color: $tertiary-color;
+            text-align: center;
+            padding-top: 1rem;
+            padding-bottom: 1rem;
+            border-radius: 0 1rem 1rem 0;
+            position: absolute;
+            right: 1rem;
+            transform-origin: right;       
+            transform: scaleX(0);
+            visibility: hidden;
+            transition: transform 500ms ease-in-out;
+            
+        }
+
+
+
 
     }
+
+
+    // .ent {
+        
+    //     display: flex;
+    //     justify-content: space-between;
+    //     background-color: white;
+    //     border-radius: 1rem;
+    //     margin-top: 1rem;
+    //     width: 100%;
+
+
+    //     .ent-txt {
+    //         display: flex;
+    //         flex-direction: column;
+    //         width: 100%;
+    //         padding: 0.5rem;
+    //         transition: all 1s ease-in-out;
+
+    //         &:hover {
+    //             width: 90%; 
+    //         }
+
+    //         &:hover + .slide-tick {
+    //             transform: translateX(-175px);
+                
+    //         }
+    //     }
+
+    //     .price-wrap {
+    //         display: flex;
+    //         justify-content: space-between;
+    //         width: 95%;
+    //     }
+    // }
 
     .items {
         display: flex;
         flex-direction: column;
         width: 100%;
+        transform-origin: top;
+        animation: growDown 4s ease-in-out;
+        
+        
         
         .item-title {
             margin-top: 2rem;
@@ -76,19 +150,9 @@ main {
 
 
 
-        .tick-box {
-            display: inline-block;
-            color: white;
-            width: 15%;
-            background-color: $tertiary-color;
-            text-align: center;
-            
+        
 
-        }
-
-        .ent-btn {
-            display: flex;
-        }
+                
 
         
     
@@ -112,6 +176,15 @@ main {
     }
     
 
+}
+
+@keyframes growDown {
+    0% {
+        transform: scaleY(0);
+    }
+    100% {
+        transform: scaleY(1);
+    }
 }
 
 
