--- a/scss/base/_body.scss
+++ b/scss/base/_body.scss
@@ -11,7 +11,7 @@ body {
         
         width: 100%;
         height: 100%;
-        position: fixed;
+        position: absolute;
         z-index: 4;
         background: lightblue;
         transition: visibility ease-in-out 3s;
@@ -53,6 +53,7 @@ body {
       .full-pal-img {
 
         position: relative;
+
         
         
         img {
@@ -68,11 +69,14 @@ body {
 
       main {
         position: relative;
-        top: -4rem;
+        margin-top: -4rem;
+        // top: -4rem;
         z-index: 2;
         overflow: visible;
 
       }
+
+
 
 }
 
