--- a/scss/base/_media.scss
+++ b/scss/base/_media.scss
@@ -21,22 +21,58 @@
 
 
         .rest-wrapper {
-            align-items: center;
+            
+             
             display: flex;
             flex-direction: column;
             .rest-wrap {
                 display: flex;
+                justify-content: space-between;
+                margin-top: 1rem;
+
+                .rest-card {
+                    display: inline-block;
+                    width: 47%;
+                    margin-left: 10px;
+
+                    .new {
+                        position: relative;
+                        bottom: 17rem;
+                        left: 30rem;
+                    }
+                }
+
             }
 
         }
        
 
 
-        .rest-card {
-            display: inline-block;
-            width: 47%;
-            // margin-left: 10px;
-        }
-    }
+        
 
+    }
+}
+
+
+@media screen and (min-width: 1024px) {
+    .restaurants {
+
+        .rest-wrapper {
+ 
+            .rest-wrap {
+
+                .rest-card {
+
+                    .new {
+                        position: relative;
+                        bottom: 17rem;
+                        left: 20rem;
+                    }
+                }
+
+            }
+
+        }        
+
+    }
 }
