--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,13 +12,29 @@
 main {
 
     background-color: whitesmoke;
-    height: auto;
+    
     border-radius: 40px;
 
     
     .fp-title {  
         display: flex;
         justify-content: space-between;
+        padding-top: 2rem;
+
+        .target:hover .heart2 {
+            opacity: 100%;
+            color: $primary-color;
+        }
+
+        .target:hover .heart3 {
+            opacity: 0;
+            transition: opacity 2s;
+        }
+          
+          .heart2 {
+            opacity: 0;
+            transition: opacity 2s;
+          }
 
         h1 {
             font-family: 'Shrikhand', cursive;
@@ -27,10 +43,6 @@ main {
             margin-left: 1rem;
         }
 
-        .fas {
-            padding-right: 1.5rem;
-            padding-top: 0.2rem;
-        }
     }
 }
 
@@ -148,13 +160,7 @@ main {
             
         }
 
-
-
-        
-
-                
-
-        
+   
     
     }
 
@@ -162,8 +168,9 @@ main {
 
         button {
             
-            padding-right: 4rem;
-            padding-left: 4rem;
+            // padding-right: 4rem;
+            // padding-left: 4rem;
+            padding: 1rem 4rem 1rem 4rem;
             margin-top: 3rem;
             margin-bottom: 3rem;
             border-radius: 50px;
