--- a/scss/base/_media.scss
+++ b/scss/base/_media.scss
@@ -1,3 +1,147 @@
+@media screen and (min-width: 280px) {
+    .restaurants {
+
+        .rest-wrapper {
+ 
+            .rest-wrap {
+
+                .rest-card {
+
+                    .new {
+                        position: relative;
+                        bottom: 17rem;
+                        left: 10rem;
+                        padding: 0.3rem 1.5rem 0.3rem 1.5rem;
+                    }
+                }
+
+            }
+
+        }        
+
+    }
+}
+
+@media screen and (min-width: 320px) {
+    .restaurants {
+
+        .rest-wrapper {
+ 
+            .rest-wrap {
+
+                .rest-card {
+
+                    .new {
+                        position: relative;
+                        bottom: 17rem;
+                        left: 12rem;
+                    }
+                }
+
+            }
+
+        }        
+
+    }
+}
+
+@media screen and (min-width: 360px) {
+    .restaurants {
+
+        .rest-wrapper {
+ 
+            .rest-wrap {
+
+                .rest-card {
+
+                    .new {
+                        position: relative;
+                        bottom: 17rem;
+                        left: 14rem;
+                    }
+                }
+
+            }
+
+        }        
+
+    }
+}
+
+@media screen and (min-width: 375px) {
+    .restaurants {
+
+        .rest-wrapper {
+ 
+            .rest-wrap {
+
+                .rest-card {
+
+                    .new {
+                        position: relative;
+                        bottom: 17rem;
+                        left: 15rem;
+                    }
+                }
+
+            }
+
+        }        
+
+    }
+}
+
+@media screen and (min-width: 400px) {
+    .restaurants {
+
+        .rest-wrapper {
+ 
+            .rest-wrap {
+
+                .rest-card {
+
+                    .new {
+                        position: relative;
+                        bottom: 17rem;
+                        left: 17rem;
+                    }
+                }
+
+            }
+
+        }        
+
+    }
+}
+
+
+
+@media screen and (min-width: 540px) {
+    .restaurants {
+
+        .rest-wrapper {
+ 
+            .rest-wrap {
+
+                .rest-card {
+
+                    .new {
+                        position: relative;
+                        bottom: 17rem;
+                        left: 23rem;
+                    }
+                }
+
+            }
+
+        }        
+
+    }
+}
+
+
+
+
 @media screen and (min-width: 768px) {
     
 
@@ -38,7 +182,7 @@
                     .new {
                         position: relative;
                         bottom: 17rem;
-                        left: 30rem;
+                        left: 14.5rem;
                     }
                 }
 
@@ -66,7 +210,53 @@
                     .new {
                         position: relative;
                         bottom: 17rem;
-                        left: 20rem;
+                        left: 21rem;
+                    }
+                }
+
+            }
+
+        }        
+
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .restaurants {
+
+        .rest-wrapper {
+ 
+            .rest-wrap {
+
+                .rest-card {
+
+                    .new {
+                        position: relative;
+                        bottom: 17rem;
+                        left: 26rem;
+                    }
+                }
+
+            }
+
+        }        
+
+    }
+}
+
+@media screen and (min-width: 1400px) {
+    .restaurants {
+
+        .rest-wrapper {
+ 
+            .rest-wrap {
+
+                .rest-card {
+
+                    .new {
+                        position: relative;
+                        bottom: 17rem;
+                        left: 32rem;
                     }
                 }
 
