--- a/scss/layouts/_how.scss
+++ b/scss/layouts/_how.scss
@@ -26,9 +26,24 @@
         font-size: medium;
         font-weight: bold;
         text-align: left;
+
+        &:hover {
+            background-color: hsl(286, 50%, 90%);
+            transition: background-color 2s;
+        }
+
+        span {
+            position: relative;
+            left: -1rem;
+        }
     }
 
-    .choose::before {
+    .how-icon {
+        position: relative;
+        left: -2rem;
+    }
+
+    .how-list::before {
         content: "1";
         position: relative;
         top: 0.1rem;
@@ -41,30 +56,5 @@
         border-radius: 50%;
     }
 
-    .create::before {
-        content: "2";
-        position: relative;
-        top: 0.1rem;
-        left: -3.5rem;
-        background-color: $primary-color;
-        padding: 0.5rem;
-        color: white;
-        font-weight: lighter;
-        font-size: medium;
-        border-radius: 50%;
-    }
-
-    .go::before {
-        content: "3";
-        position: relative;
-        top: 0.1rem;
-        left: -3.5rem;
-        background-color: $primary-color;
-        padding: 0.5rem;
-        color: white;
-        font-weight: lighter;
-        font-size: medium;
-        border-radius: 50%;
-    }
 
 }
