--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,22 @@
 @import './layouts/foot';
 @import './base/media';
 
+body {
+    .head-container {
+        a {
+            text-decoration: none;
+            color: black;
+        }
+
+        .back-btn {
+            position: absolute;
+            left: 1rem;
+            text-decoration: none;
+        }
+    }
+}
+
+
 main {
 
     background-color: whitesmoke;
@@ -20,6 +36,11 @@ main {
         display: flex;
         justify-content: space-between;
         padding-top: 2rem;
+
+        .target {
+            position: relative;
+            bottom: 1rem;
+        }
 
         .target:hover .heart2 {
             opacity: 100%;
@@ -93,7 +114,7 @@ main {
             width: 10%;
             background-color: $tertiary-color;
             text-align: center;
-            padding-top: 1rem;
+            padding-top: 1.4rem;
             padding-bottom: 1rem;
             border-radius: 0 1rem 1rem 0;
             position: absolute;
